--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -7,25 +7,60 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>{% block title %}{% endblock title %}</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
-{#        <script src="{% static 'js/main.js' %}"></script>#}
+        {#        <script src="{% static 'js/main.js' %}"></script>#}
 
-        <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <style>
+        body {
+            background-image: url('http://www.zastavki.com/pictures/originals/2013/Fantasy__039453_.png');
+            background-attachment: scroll;
+        }
+        .thumbnail {
+            border: 1px;
+            border-radius: 0px;
+        }
+        .col-md-2 {
+            padding: 5px;
+        }
+    </style>
     </head>
 
     <body>
+
     <header>
-        <nav class="navbar navbar-light bg-faded">
-          <a class="navbar-brand" href="/">Главная</a>
-          <ul class="nav navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="/achievements/">Ачивки</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/admin/">Администрирование</a>
-            </li>
-          </ul>
-        </nav>
+        <div class="row"><nav class="navbar navbar-default navbar-static-top col-md-10 col-md-offset-1">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">GoTo Achievement</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Лента</a></li>
+        <li><a href="/students/">Участники</a></li>
+        <li><a href="/achievements/">Достижения</a></li>
+      </ul>
+
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+        </div>
     </header>
 
     <main>
@@ -34,8 +69,8 @@
         </div>
     </main>
 
-    <footer>
-        GotoCamp 2016
+    <footer class="text-center">
+        <strong>GotoCamp 2016</strong>
     </footer>
 
     <script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
