--- a/main/templates/main/student_detail.html
+++ b/main/templates/main/student_detail.html
@@ -3,12 +3,16 @@
 {% block title %}{{ student.fullname }}{% endblock title %}
 
 {% block content %}
-    <h4>{{ student.firstname }} {{ student.lastname }}</h4>
-    {% if student.photo %}<img src="{{ student.photo.url }}" alt="{{ student }}" width="400px">{% endif %}
-    <p>Список ачивок</p>
-    <ul>
+    <h3 class="text-center">{{ student.firstname }} {{ student.lastname }}</h3>
         {% for record in student.records.all %}
-            <li><a href="{{  record.achievement.get_absolute_url }}">{{ record.without_student }}</a></li>
+            <div class="col-md-2">
+                        <div class="thumbnail">
+                          <img src="{{ record.achievement.image.url }}">
+                          <div class="caption">
+                            <h4>{{ record.achievement.title }}</h4>
+                            <p>{{ record.achievement.description }}</p>
+                            </div>
+                        </div>
+                      </div>
         {% endfor %}
-    </ul>
 {% endblock content %}
