--- a/main/templates/main/achievement_list.html
+++ b/main/templates/main/achievement_list.html
@@ -15,6 +15,9 @@
                             </div>
                         </div>
                       </div>
+{% if forloop.counter|divisibleby:6 %}
+                                <hr style="clear:both;" />
+                        {% endif %}
     {% endfor %}
 
 {% endblock content %}
