--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -16,6 +16,10 @@
                             </div>
                         </div>
                       </div>
+                        {% if forloop.counter|divisibleby:6 %}
+                                <hr style="clear:both;" />
+                        {% endif %}
+
                 {% endfor %}
     </div>
 {% endblock content %}
