--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -20,7 +20,7 @@
     <style>
         body {
             background-image: url('http://www.zastavki.com/pictures/originals/2013/Fantasy__039453_.png');
-            background-attachment: scroll;
+            background-attachment: fixed;
         }
         .thumbnail {
             border: 1px;
