--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -45,7 +45,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">GoTo Achievement</a>
+      <a class="navbar-brand" href="/">GoTo Achievement</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
