--- a/main/templates/main/student_detail.html
+++ b/main/templates/main/student_detail.html
@@ -5,10 +5,11 @@
 {% block content %}
     <h3 class="text-center">{{ student.firstname }} {{ student.lastname }}</h3>
         {% if student.photo %}
-            <img src="{{ student.photo.url }}" alt="{{ student }}" style='max-width:300px;'>
+            <img src="{{ student.photo.url }}" alt="{{ student }}" class='center-block' style='max-width:400px;'>
         {% else %}
-            <img src="http://files.gamebanana.com/img/ico/sprays/superman_flying1.png" title="Superman">
+            <img src="http://files.gamebanana.com/img/ico/sprays/superman_flying1.png" title="Superman" class='center-block' style='max-width:400px;'>
         {% endif %}
+        <br>
         {% for record in student.records.all %}
             <div class="col-md-2">
                         <div class="thumbnail">
